tests/fixtures/realworld/istio/valid/case-032-RW-8-32-ServiceEntry-valid-with-endpoints.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: endpoint-svc
  namespace: default
spec:
  hosts:
  - my-svc.example.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: 192.168.1.1
    ports:
      http: 8080
